--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 </head>
 
 <body>
-    <h1>Portfolio</h1>
+    <div class="hero">
+        <p>👋 Hello, I am</p>
+        <h1>Laurel Rubel</h1>
+        <h2 class="mb-3">Front-end developer based in Colorado, U.S.</h2>
+        <div>
+            <a href="#" class="btn btn-branding">Contact me</a>
+        </div>
+    </div>
 </body>
 
 </html>
