Integrated homepage content design

--- a/index.html
+++ b/index.html
@@ -28,6 +28,63 @@
             <a href="#" class="btn btn-branding">Contact me</a>
         </div>
     </div>
+    <p class="text-center m-5">Featured projects</p>
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col d-none d-lg-block">
+                <img src="/images/yogurt.png" class="img-fluid" alt="Yogurt project">
+            </div>
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">Yogurt Project</h2>
+                    <p class="mb-5 text-muted">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum vitae qui cupiditate sint
+                        officia
+                        asperiores
+                        adipisci! Non harum quasi labore, rem magnam, nihil delectus fuga necessitatibus ullam, ut neque
+                        est.
+                    </p>
+                    <a href="#" class="btn btn-branding-outline">Learn more</a>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-5">
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">Weather Project</h2>
+                    <p class="mb-5 text-muted">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum vitae qui cupiditate sint
+                        officia
+                        asperiores
+                        adipisci! Non harum quasi labore, rem magnam, nihil delectus fuga necessitatibus ullam, ut neque
+                        est.
+                    </p>
+                    <a href="#" class="btn btn-branding-outline">Learn more</a>
+                </div>
+            </div>
+            <div class="col d-none d-lg-block">
+                <img src="/images/weather.png" class="img-fluid" alt="Weather project">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col d-none d-lg-block">
+                <img src="/images/yoga.png" class="img-fluid" alt="Yoga project">
+            </div>
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">Yoga Project</h2>
+                    <p class="mb-5 text-muted">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum vitae qui cupiditate sint
+                        officia
+                        asperiores
+                        adipisci! Non harum quasi labore, rem magnam, nihil delectus fuga necessitatibus ullam, ut neque
+                        est.
+                    </p>
+                    <a href="#" class="btn btn-branding-outline">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
