Updated html title and style

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/13cea5acbe.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/style.css">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
     <div class="hero">
         <p>👋 Hello, I am</p>
         <h1>Laurel Rubel</h1>
-        <h2 class="mb-3">Front-end developer based in Colorado, U.S.</h2>
+        <h2 class="mb-5">Front-end developer based in Colorado, U.S.</h2>
         <div>
             <a href="#" class="btn btn-branding">Contact me</a>
         </div>
@@ -51,7 +51,7 @@
         <div class="row mb-5">
             <div class="col">
                 <div class="project-description">
-                    <h2 class="mb-5">Weather Project</h2>
+                    <h2 class="mb-5">Weather App</h2>
                     <p class="mb-5 text-muted">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum vitae qui cupiditate sint
                         officia
