--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
 </head>
 
 <body>
-    <div class="about-section container">
+    <div class="content-container container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="about-section-content">
+                <div class="content">
                     <h1 class="mb-4">Hi, I'm Laurel Rubel</h1>
                     <h2 class="mb-4">Front-end developer, based in Colorado.</h2>
                     <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nostrum,
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <img src="/images/rubel.jpg" class="img-fluid" alt="">
+                <img src="/images/rubel.jpg" class="img-fluid portrait" alt="">
             </div>
         </div>
     </div>
