--- a/index.html
+++ b/index.html
@@ -106,6 +106,31 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                    <h4>Work Inquiry</h4>
+                    <p class="text-muted">Let's work together</p>
+                </div>
+                <div>
+                    <a href="" class="btn btn-branding mt-3">Contact me</a>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <a href="mailto:laurel.rubel@gmail.com" class="email-link">laurel.rubel@gmail.com</a>
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://github.com/LaurelFR" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+        </footer>
     </div>
 </body>
 
