--- a/contact.html
+++ b/contact.html
@@ -16,28 +16,29 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/13cea5acbe.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/style.css">
+    <meta name="description" content="Contact Laurel, a front-end developer based in Denver, Colorado.">
     <title>Contact Laurel Rubel</title>
 </head>
 
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <a href="/">
-                <img src="/images/logo.png" class="logo d-none d-md-block" alt="">
-                <img src="/images/logo-small.png" class="logo d-block d-md-none" alt="">
+            <a href="/" title="Homepage">
+                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Laurel logo">
+                <img src="/images/logo-small.png" class="logo d-block d-md-none" alt="Laurel logo">
             </a>
             <ul>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="/" title="Homepage">Home</a>
                 </li>
                 <li>
-                    <a href="/about.html">About</a>
+                    <a href="/about.html" title="About Laurel">About</a>
                 </li>
                 <li>
-                    <a href="/work.html">Work</a>
+                    <a href="/work.html" title="Laurel's work">Work</a>
                 </li>
                 <li class="active">
-                    <a href="/contact.html">Contact</a>
+                    <a href="/contact.html" title="Contact Laurel">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -47,17 +48,48 @@
             <h1 class="mb-5">Let's get in touch!</h1>
             <h3>Email</h3>
             <p>
-                <a href="mailto:laurel.rubel@gmail.com" target="_blank">laurel.rubel@gmail.com</a>
+                <a href="mailto:laurel.rubel@gmail.com" target="_blank" title="Email Laurel">laurel.rubel@gmail.com</a>
             </p>
             <h3>GitHub</h3>
             <p>
-                <a href="https://github.com/LaurelFR" target="_blank">LaurelFR</a>
+                <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">LaurelFR</a>
             </p>
             <h3>LinkedIn</h3>
             <p>
-                <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank">Laurel Rubel</a>
+                <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">Laurel
+                    Rubel</a>
             </p>
         </div>
+        <footer>
+            <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                    <h3>Work Inquiry</h3>
+                    <p class="text-muted">Let's work together</p>
+                </div>
+                <div>
+                    <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Laurel">Contact me</a>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <a href="mailto:laurel.rubel@gmail.com" class="email-link"
+                    title="Email Laurel">laurel.rubel@gmail.com</a>
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="" target="_blank" title="Instagram Profile">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+            <p class="text-center mt-5">
+                ✌️ This project was coded by Laurel Rubel and is
+                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced</a>
+            </p>
+        </footer>
     </div>
 </body>
 
