--- a/index.html
+++ b/index.html
@@ -16,28 +16,29 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/13cea5acbe.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/style.css">
-    <title>Portfolio</title>
+    <meta name="description" content="Laurel is a front-end engineer based in Denver, Colorado.">
+    <title>Front-end developer - Laurel Rubel</title>
 </head>
 
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <a href="/">
-                <img src="/images/logo.png" class="logo d-none d-md-block" alt="">
-                <img src="/images/logo-small.png" class="logo d-block d-md-none" alt="">
+            <a href="/" title="Homepage">
+                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Laurel logo">
+                <img src="/images/logo-small.png" class="logo d-block d-md-none" alt="Laurel logo">
             </a>
             <ul>
                 <li class="active">
-                    <a href="/">Home</a>
+                    <a href="/" title="Homepage">Home</a>
                 </li>
                 <li>
-                    <a href="/about.html">About</a>
+                    <a href="/about.html" title="About Laurel">About</a>
                 </li>
                 <li>
-                    <a href="/work.html">Work</a>
+                    <a href="/work.html" title="Laurel's work">Work</a>
                 </li>
                 <li>
-                    <a href="/contact.html">Contact</a>
+                    <a href="/contact.html" title="Contact Laurel">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -47,14 +48,14 @@
         <h1>Laurel Rubel</h1>
         <h2 class="mb-5">Front-end developer based in Colorado, U.S.</h2>
         <div>
-            <a href="#" class="btn btn-branding">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding" title="Contact me">Contact me</a>
         </div>
     </div>
     <p class="text-center m-5">Featured projects</p>
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="/images/yogurt.png" class="img-fluid" alt="Yogurt project">
+                <img src="/images/yogurt.png" class="img-fluid" alt="Yogurt project preview">
             </div>
             <div class="col">
                 <div class="project-description">
@@ -66,7 +67,7 @@
                         adipisci! Non harum quasi labore, rem magnam, nihil delectus fuga necessitatibus ullam, ut neque
                         est.
                     </p>
-                    <a href="#" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
         </div>
@@ -81,16 +82,16 @@
                         adipisci! Non harum quasi labore, rem magnam, nihil delectus fuga necessitatibus ullam, ut neque
                         est.
                     </p>
-                    <a href="#" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
             <div class="col d-none d-lg-block">
-                <img src="/images/weather.png" class="img-fluid" alt="Weather project">
+                <img src="/images/weather.png" class="img-fluid" alt="Weather project preview">
             </div>
         </div>
         <div class="row">
             <div class="col d-none d-lg-block">
-                <img src="/images/yoga.png" class="img-fluid" alt="Yoga project">
+                <img src="/images/yoga.png" class="img-fluid" alt="Yoga project preview">
             </div>
             <div class="col">
                 <div class="project-description">
@@ -102,34 +103,39 @@
                         adipisci! Non harum quasi labore, rem magnam, nihil delectus fuga necessitatibus ullam, ut neque
                         est.
                     </p>
-                    <a href="#" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
         </div>
         <footer>
             <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
                 <div>
-                    <h4>Work Inquiry</h4>
+                    <h3>Work Inquiry</h3>
                     <p class="text-muted">Let's work together</p>
                 </div>
                 <div>
-                    <a href="" class="btn btn-branding mt-3">Contact me</a>
+                    <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Laurel">Contact me</a>
                 </div>
             </div>
             <div class="d-flex justify-content-center mb-5">
-                <a href="mailto:laurel.rubel@gmail.com" class="email-link">laurel.rubel@gmail.com</a>
+                <a href="mailto:laurel.rubel@gmail.com" class="email-link"
+                    title="Email Laurel">laurel.rubel@gmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center">
-                <a href="https://github.com/LaurelFR" target="_blank">
+                <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="" target="_blank">
+                <a href="" target="_blank" title="Instagram Profile">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank">
+                <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
+            <p class="text-center mt-5">
+                ✌️ This project was coded by Laurel Rubel and is
+                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced</a>
+            </p>
         </footer>
     </div>
 </body>
