--- a/work.html
+++ b/work.html
@@ -16,28 +16,29 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/13cea5acbe.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/style.css">
-    <title>My Work</title>
+    <meta name="description" content="Work by Laurel Rubel, a front-end developer based in Denver, Colorado">
+    <title>Laurel Rubel's Work</title>
 </head>
 
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <a href="/">
-                <img src="/images/logo.png" class="logo d-none d-md-block" alt="">
-                <img src="/images/logo-small.png" class="logo d-block d-md-none" alt="">
+            <a href="/" title="Homepage">
+                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Laurel logo">
+                <img src="/images/logo-small.png" class="logo d-block d-md-none" alt="Laurel logo">
             </a>
             <ul>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="/" title="Homepage">Home</a>
                 </li>
                 <li>
-                    <a href="/about.html">About</a>
+                    <a href="/about.html" title="About Laurel">About</a>
                 </li>
                 <li class="active">
-                    <a href="/work.html">Work</a>
+                    <a href="/work.html" title="Laurel's work">Work</a>
                 </li>
                 <li>
-                    <a href="/contact.html">Contact</a>
+                    <a href="/contact.html" title="Contact Laurel">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -48,28 +49,57 @@
 
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <img src="/images/yogurt.png" class="img-fluid mb-3 rounded" alt="">
+                    <img src="/images/yogurt.png" class="img-fluid mb-3 rounded" alt="Yogurt project preview">
                     <h3 class="text-center m-0">Yogurt Project</h3>
                     <p class="text-center text-muted">Built with HTML and CSS</p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="/images/weather.png" class="img-fluid mb-3 rounded" alt="">
+                    <img src="/images/weather.png" class="img-fluid mb-3 rounded" alt="Weather project preview">
                     <h3 class="text-center m-0">Weather App</h3>
                     <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="/images/dictionary.png" class="img-fluid mb-3 rounded" alt="">
+                    <img src="/images/dictionary.png" class="img-fluid mb-3 rounded" alt="Dictionary app preview">
                     <h3 class="text-center m-0">Dictionary App</h3>
                     <p class="text-center text-muted">Built with HTML, CSS and React</p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="/images/translation.png" class="img-fluid mb-3 rounded" alt="">
+                    <img src="/images/translation.png" class="img-fluid mb-3 rounded" alt="Translation app preview">
                     <h3 class="text-center m-0">Translation App</h3>
                     <p class="text-center text-muted">Built with HTML, CSS and React</p>
                 </div>
             </div>
-
         </div>
+        <footer>
+            <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                    <h3>Work Inquiry</h3>
+                    <p class="text-muted">Let's work together</p>
+                </div>
+                <div>
+                    <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Laurel">Contact me</a>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <a href="mailto:laurel.rubel@gmail.com" class="email-link"
+                    title="Email Laurel">laurel.rubel@gmail.com</a>
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="" target="_blank" title="Instagram Profile">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+            <p class="text-center mt-5">
+                ✌️ This project was coded by Laurel Rubel and is
+                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced</a>
+            </p>
+        </footer>
     </div>
 </body>
 
