--- a/index.html
+++ b/index.html
@@ -46,62 +46,53 @@
     <div class="hero">
         <p>👋 Hello, I am</p>
         <h1>Laurel Rubel</h1>
-        <h2 class="mb-5">Front-end developer based in Colorado, U.S.</h2>
+        <h2 class="mb-5">Front-end developer based in Denver, Colorado</h2>
         <div>
             <a href="/contact.html" class="btn btn-branding" title="Contact me">Contact me</a>
         </div>
     </div>
-    <p class="text-center m-5">Featured projects</p>
+    <p class="text-center m-5">Check out some of my featured projects below</p>
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="/images/yogurt.png" class="img-fluid" alt="Yogurt project preview">
+                <img src="/images/weatherapp.png" class="img-fluid project-preview" alt="Weather project preview">
             </div>
-            <div class="col">
-                <div class="project-description">
-                    <h2 class="mb-5">Yogurt Project</h2>
-                    <p class="mb-5 text-muted">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum vitae qui cupiditate sint
-                        officia
-                        asperiores
-                        adipisci! Non harum quasi labore, rem magnam, nihil delectus fuga necessitatibus ullam, ut neque
-                        est.
-                    </p>
-                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
-                </div>
-            </div>
-        </div>
-        <div class="row mb-5">
             <div class="col">
                 <div class="project-description">
                     <h2 class="mb-5">Weather App</h2>
                     <p class="mb-5 text-muted">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum vitae qui cupiditate sint
-                        officia
-                        asperiores
-                        adipisci! Non harum quasi labore, rem magnam, nihil delectus fuga necessitatibus ullam, ut neque
-                        est.
+                        Made with HTML, CSS and JavaScript. Using the SheCodes weather API, this app display the current
+                        temperature of any city and a forecast for the next six days.
+                    </p>
+                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-5">
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">World Clock</h2>
+                    <p class="mb-5 text-muted">
+                        Made with HTML, CSS, Javascript and Moment.js, this app displays the current time in
+                        multiple cities around the world, updating every second.
                     </p>
                     <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
             <div class="col d-none d-lg-block">
-                <img src="/images/weather.png" class="img-fluid" alt="Weather project preview">
+                <img src="/images/worldclock.png" class="img-fluid project-preview" alt="World clock project preview">
             </div>
         </div>
         <div class="row">
             <div class="col d-none d-lg-block">
-                <img src="/images/yoga.png" class="img-fluid" alt="Yoga project preview">
+                <img src="/images/walking.png" class="img-fluid project-preview" alt="Walking project preview">
             </div>
             <div class="col">
                 <div class="project-description">
-                    <h2 class="mb-5">Yoga Project</h2>
+                    <h2 class="mb-5">Walking Project</h2>
                     <p class="mb-5 text-muted">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum vitae qui cupiditate sint
-                        officia
-                        asperiores
-                        adipisci! Non harum quasi labore, rem magnam, nihil delectus fuga necessitatibus ullam, ut neque
-                        est.
+                        Made with HTML, CSS and JavaScript, this project discusses the hidden benefits of walking. Users
+                        can change the theme of the page as well.
                     </p>
                     <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
@@ -125,16 +116,13 @@
                 <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="" target="_blank" title="Instagram Profile">
-                    <i class="fab fa-instagram"></i>
-                </a>
                 <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
             <p class="text-center mt-5">
                 ✌️ This project was coded by Laurel Rubel and is
-                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced</a>
+                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced on GitHub</a>
             </p>
         </footer>
     </div>
