--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <img src="/images/rubel.jpg" class="img-fluid portrait" alt="Laurel Rubel">
+                <img src="/images/lrubel.JPG" class="img-fluid portrait" alt="Laurel Rubel">
             </div>
         </div>
         <footer>
@@ -81,16 +81,13 @@
                 <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="" target="_blank" title="Instagram Profile">
-                    <i class="fab fa-instagram"></i>
-                </a>
                 <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
             <p class="text-center mt-5">
                 ✌️ This project was coded by Laurel Rubel and is
-                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced</a>
+                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced on GitHub</a>
             </p>
         </footer>
     </div>
