--- a/contact.html
+++ b/contact.html
@@ -78,16 +78,13 @@
                 <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="" target="_blank" title="Instagram Profile">
-                    <i class="fab fa-instagram"></i>
-                </a>
                 <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
             <p class="text-center mt-5">
                 ✌️ This project was coded by Laurel Rubel and is
-                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced</a>
+                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced on GitHub</a>
             </p>
         </footer>
     </div>
