--- a/work.html
+++ b/work.html
@@ -49,19 +49,19 @@
 
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <img src="/images/yogurt.png" class="img-fluid mb-3 rounded" alt="Yogurt project preview">
-                    <h3 class="text-center m-0">Yogurt Project</h3>
-                    <p class="text-center text-muted">Built with HTML and CSS</p>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <img src="/images/weather.png" class="img-fluid mb-3 rounded" alt="Weather project preview">
+                    <img src="/images/weatherapp.png" class="img-fluid mb-3 rounded" alt="Weather app preview">
                     <h3 class="text-center m-0">Weather App</h3>
                     <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="/images/dictionary.png" class="img-fluid mb-3 rounded" alt="Dictionary app preview">
-                    <h3 class="text-center m-0">Dictionary App</h3>
-                    <p class="text-center text-muted">Built with HTML, CSS and React</p>
+                    <img src="/images/worldclock.png" class="img-fluid mb-3 rounded" alt="World clock project preview">
+                    <h3 class="text-center m-0">World Clock Project</h3>
+                    <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <img src="/images/walking.png" class="img-fluid mb-3 rounded" alt="Walking project preview">
+                    <h3 class="text-center m-0">Walking Project</h3>
+                    <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                 </div>
                 <div class="col-md-6 mb-4">
                     <img src="/images/translation.png" class="img-fluid mb-3 rounded" alt="Translation app preview">
@@ -88,16 +88,13 @@
                 <a href="https://github.com/LaurelFR" target="_blank" title="GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="" target="_blank" title="Instagram Profile">
-                    <i class="fab fa-instagram"></i>
-                </a>
                 <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
             <p class="text-center mt-5">
                 ✌️ This project was coded by Laurel Rubel and is
-                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced</a>
+                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced on GitHub</a>
             </p>
         </footer>
     </div>
