Update about section content

--- a/about.html
+++ b/about.html
@@ -49,13 +49,7 @@
                 <div class="content">
                     <h1 class="mb-4">Hi, I'm Laurel Rubel</h1>
                     <h2 class="mb-4">Front-end developer, based in Colorado.</h2>
-                    <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nostrum,
-                        quibusdam,
-                        perspiciatis
-                        eligendi
-                        corporis dolorem facere porro necessitatibus iure et at temporibus nulla rem est hic eum?
-                        Necessitatibus,
-                        asperiores recusandae?</p>
+                    <p class="mb-5">Experience working in HTML, CSS and JavaScript.</p>
                     <a href="/work.html" class="btn btn-branding">See my projects</a>
                 </div>
             </div>
