--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div class="container">
         <nav class="d-flex justify-content-between">
             <a href="/" title="Homepage">
-                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Laurel logo">
-                <img src="/images/logo-small.png" class="logo d-block d-md-none" alt="Laurel logo">
+                <img src="/images/logo.png" class="logo" alt="Laurel logo">
             </a>
             <ul>
                 <li class="active">
@@ -44,7 +43,7 @@
         </nav>
     </div>
     <div class="hero">
-        <p>👋 Hello, I am</p>
+        <p>👋 Hello, I'm</p>
         <h1>Laurel Rubel</h1>
         <h2 class="mb-5">Front-end developer based in Denver, Colorado</h2>
         <div>
