Updated projects displayed

--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
     <p class="text-center m-5">Check out some of my featured projects below</p>
     <div class="container">
         <div class="row mb-5">
-            <div class="col d-none d-lg-block">
+            <div class="col d-none d-lg-block project">
                 <img src="/images/weatherapp.png" class="img-fluid project-preview" alt="Weather project preview">
             </div>
             <div class="col">
                 <div class="project-description">
                     <h2 class="mb-5">Weather App</h2>
                     <p class="mb-5 text-muted">
-                        Made with HTML, CSS and JavaScript. Using the SheCodes weather API, this app display the current
+                        Made with React.js, Bootstrap, HTML, CSS and JavaScript. Using the SheCodes weather API, this
+                        app display the current
                         temperature of any city and a forecast for the next six days.
                     </p>
                     <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
@@ -70,28 +71,29 @@
         <div class="row mb-5">
             <div class="col">
                 <div class="project-description">
-                    <h2 class="mb-5">World Clock</h2>
+                    <h2 class="mb-5">Dictionary App</h2>
                     <p class="mb-5 text-muted">
-                        Made with HTML, CSS, Javascript and Moment.js, this app displays the current time in
-                        multiple cities around the world, updating every second.
+                        Made with React.js, Bootstrap, HTML, CSS, and JavaScript, users can search for any word and find
+                        the definition along with some example sentences, synonyms, and photos.
                     </p>
                     <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
-            <div class="col d-none d-lg-block">
-                <img src="/images/worldclock.png" class="img-fluid project-preview" alt="World clock project preview">
+            <div class="col d-none d-lg-block project">
+                <img src="/images/dictionaryapp.png" class="img-fluid project-preview" alt="Dictionary app preview">
             </div>
         </div>
         <div class="row">
-            <div class="col d-none d-lg-block">
-                <img src="/images/walking.png" class="img-fluid project-preview" alt="Walking project preview">
+            <div class="col d-none d-lg-block project">
+                <img src="/images/travel.png" class="img-fluid project-preview" alt="Travel project preview">
             </div>
             <div class="col">
                 <div class="project-description">
-                    <h2 class="mb-5">Walking Project</h2>
+                    <h2 class="mb-5">Travel landing page</h2>
                     <p class="mb-5 text-muted">
-                        Made with HTML, CSS and JavaScript, this project discusses the hidden benefits of walking. Users
-                        can change the theme of the page as well.
+                        Made with Bootstrap, HTML, and CSS, this project showcases the city of Denver with some facts
+                        about the city, recommended restaurants and some great photos! This landing page also
+                        demonstrates great SEO and is fully responsive.
                     </p>
                     <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
                 </div>
