--- a/work.html
+++ b/work.html
@@ -24,8 +24,7 @@
     <div class="container">
         <nav class="d-flex justify-content-between">
             <a href="/" title="Homepage">
-                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Laurel logo">
-                <img src="/images/logo-small.png" class="logo d-block d-md-none" alt="Laurel logo">
+                <img src="/images/logo.png" class="logo d-md-block" alt="Laurel logo">
             </a>
             <ul>
                 <li>
@@ -51,22 +50,42 @@
                 <div class="col-md-6 mb-4">
                     <img src="/images/weatherapp.png" class="img-fluid mb-3 rounded" alt="Weather app preview">
                     <h3 class="text-center m-0">Weather App</h3>
-                    <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML, CSS and JavaScript</p>
+                    <div class="text-center mt-4 mb-5">
+                        <a href="https://react-weather-app-lfr.netlify.app/"
+                            class="btn btn-branding launch-button">Launch
+                            Project</a>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <img src="/images/dictionaryapp.png" class="img-fluid mb-3 rounded"
+                        alt="Dictionary project preview">
+                    <h3 class="text-center m-0">Dictionary App</h3>
+                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML, CSS, and JavaScript</p>
+                    <div class="text-center mt-4 mb-5">
+                        <a href="https://react-dictionary-app-lfr.netlify.app/"
+                            class="btn btn-branding launch-button">Launch
+                            Project</a>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <img src="/images/travel.png" class="img-fluid mb-3 rounded" alt="Travel project preview">
+                    <h3 class="text-center m-0">Travel Landing Page</h3>
+                    <p class="text-center text-muted">Built with Bootstrap, HTML, and CSS</p>
+                    <div class="text-center mt-4 mb-5">
+                        <a href="https://denver-travel-website.netlify.app/"
+                            class="btn btn-branding launch-button">Launch
+                            Project</a>
+                    </div>
                 </div>
                 <div class="col-md-6 mb-4">
                     <img src="/images/worldclock.png" class="img-fluid mb-3 rounded" alt="World clock project preview">
                     <h3 class="text-center m-0">World Clock Project</h3>
-                    <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <img src="/images/walking.png" class="img-fluid mb-3 rounded" alt="Walking project preview">
-                    <h3 class="text-center m-0">Walking Project</h3>
-                    <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <img src="/images/translation.png" class="img-fluid mb-3 rounded" alt="Translation app preview">
-                    <h3 class="text-center m-0">Translation App</h3>
-                    <p class="text-center text-muted">Built with HTML, CSS and React</p>
+                    <p class="text-center text-muted">Built with Moment.js, HTML, CSS and JavaScript</p>
+                    <div class="text-center mt-4 mb-5">
+                        <a href="https://world-clock-lr.netlify.app/" class="btn btn-branding launch-button">Launch
+                            Project</a>
+                    </div>
                 </div>
             </div>
         </div>
