--- a/about.html
+++ b/about.html
@@ -24,8 +24,7 @@
     <div class="container">
         <nav class="d-flex justify-content-between">
             <a href="/" title="Homepage">
-                <img src="/images/logo.png" class="logo d-none d-md-block" alt="Laurel logo">
-                <img src="/images/logo-small.png" class="logo d-block d-md-none" alt="Laurel logo">
+                <img src="/images/logo.png" class="logo d-md-block" alt="Laurel logo">
             </a>
             <ul>
                 <li>
