Edited text content

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <div class="project-description">
                     <h2 class="mb-5">Weather App</h2>
                     <p class="mb-5 text-muted">
-                        Made with React.js, Bootstrap, HTML, CSS and JavaScript. Using the SheCodes weather API, this
-                        app display the current
+                        Made with React.js, Bootstrap, HTML, and CSS. Using the SheCodes weather API, this
+                        app displays the current
                         temperature of any city and a forecast for the next six days.
                     </p>
                     <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
@@ -73,7 +73,8 @@
                 <div class="project-description">
                     <h2 class="mb-5">Dictionary App</h2>
                     <p class="mb-5 text-muted">
-                        Made with React.js, Bootstrap, HTML, CSS, and JavaScript, users can search for any word and find
+                        Made with React.js, Bootstrap, HTML, CSS, and the SheCodes dictionary API, users can search for
+                        any word and find
                         the definition along with some example sentences, synonyms, and photos.
                     </p>
                     <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
