--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
                 <div class="col-md-6 mb-4">
                     <img src="/images/weatherapp.png" class="img-fluid mb-3 rounded" alt="Weather app preview">
                     <h3 class="text-center m-0">Weather App</h3>
-                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML, CSS and JavaScript</p>
+                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML and CSS</p>
                     <div class="text-center mt-4 mb-5">
                         <a href="https://react-weather-app-lfr.netlify.app/"
                             class="btn btn-branding launch-button">Launch
@@ -61,7 +61,7 @@
                     <img src="/images/dictionaryapp.png" class="img-fluid mb-3 rounded"
                         alt="Dictionary project preview">
                     <h3 class="text-center m-0">Dictionary App</h3>
-                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML, CSS, and JavaScript</p>
+                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML and CSS</p>
                     <div class="text-center mt-4 mb-5">
                         <a href="https://react-dictionary-app-lfr.netlify.app/"
                             class="btn btn-branding launch-button">Launch
@@ -71,7 +71,7 @@
                 <div class="col-md-6 mb-4">
                     <img src="/images/travel.png" class="img-fluid mb-3 rounded" alt="Travel project preview">
                     <h3 class="text-center m-0">Travel Landing Page</h3>
-                    <p class="text-center text-muted">Built with Bootstrap, HTML, and CSS</p>
+                    <p class="text-center text-muted">Built with Bootstrap, HTML and CSS</p>
                     <div class="text-center mt-4 mb-5">
                         <a href="https://denver-travel-website.netlify.app/"
                             class="btn btn-branding launch-button">Launch
