Added new styling

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         </nav>
     </div>
     <div class="hero">
-        <p>👋 Hello, I'm</p>
+        <p class="mb-3">👋 Hello, I'm</p>
         <h1>Laurel Rubel</h1>
         <h2 class="mb-5">Front-end developer based in Denver, Colorado</h2>
         <div>
-            <a href="/contact.html" class="btn btn-branding" title="Contact me">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding mt-2" title="Contact me">Contact me</a>
         </div>
     </div>
     <p class="text-center m-5">Check out some of my featured projects below</p>
@@ -64,7 +64,7 @@
                         app displays the current
                         temperature of any city and a forecast for the next six days.
                     </p>
-                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html" class="btn btn-branding">Learn more</a>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
                         any word and find
                         the definition along with some example sentences, synonyms, and photos.
                     </p>
-                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html" class="btn btn-branding">Learn more</a>
                 </div>
             </div>
             <div class="col d-none d-lg-block project">
@@ -96,7 +96,7 @@
                         about the city, recommended restaurants and some great photos! This landing page also
                         demonstrates great SEO and is fully responsive.
                     </p>
-                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html" class="btn btn-branding">Learn more</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
             <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
                 <div>
                     <h3>Work Inquiry</h3>
-                    <p class="text-muted">Let's work together</p>
+                    <p class="text-muted">Let's work together!</p>
                 </div>
                 <div>
                     <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Laurel">Contact me</a>
