--- a/work.html
+++ b/work.html
@@ -93,7 +93,7 @@
             <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
                 <div>
                     <h3>Work Inquiry</h3>
-                    <p class="text-muted">Let's work together</p>
+                    <p class="text-muted">Let's work together!</p>
                 </div>
                 <div>
                     <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Laurel">Contact me</a>
