Added new styling to home page

--- a/index.html
+++ b/index.html
@@ -43,16 +43,23 @@
         </nav>
     </div>
     <div class="hero">
-        <p class="mb-3">👋 Hello, I'm</p>
-        <h1>Laurel Rubel</h1>
-        <h2 class="mb-5">Front-end developer based in Denver, Colorado</h2>
-        <div>
-            <a href="/contact.html" class="btn btn-branding mt-2" title="Contact me">Contact me</a>
+        <div class="row align-items-center">
+            <div class="col-8">
+                <p class="mb-3">👋 Hello, I'm</p>
+                <h1>Laurel Rubel</h1>
+                <h2 class="mb-5">Front-end developer based in Denver, Colorado</h2>
+                <div>
+                    <a href="/contact.html" class="btn btn-branding mt-2" title="Contact me">Contact me</a>
+                </div>
+            </div>
+            <div class="col-4 d-flex align-items-start">
+                <img src="/images/laurelrubel.png" class="img-fluid portrait" alt="Laurel Rubel">
+            </div>
         </div>
     </div>
     <p class="text-center m-5">Check out some of my featured projects below</p>
     <div class="container">
-        <div class="row mb-5">
+        <div class="row mb-5 align-items-center">
             <div class="col d-none d-lg-block project">
                 <img src="/images/weatherapp.png" class="img-fluid project-preview" alt="Weather project preview">
             </div>
@@ -60,23 +67,37 @@
                 <div class="project-description">
                     <h2 class="mb-5">Weather App</h2>
                     <p class="mb-5 text-muted">
-                        Made with React.js, Bootstrap, HTML, and CSS. Using the SheCodes weather API, this
+                        Using the SheCodes weather API, this
                         app displays the current
                         temperature of any city and a forecast for the next six days.
                     </p>
+                    <div class="mb-5">
+                        <span class="skill">React.js</span>
+                        <span class="skill">Bootstrap</span>
+                        <span class="skill">HTML</span>
+                        <span class="skill">CSS</span>
+                        <span class="skill">API</span>
+                    </div>
                     <a href="/work.html" class="btn btn-branding">Learn more</a>
                 </div>
             </div>
         </div>
-        <div class="row mb-5">
+        <div class="row mb-5 align-items-center">
             <div class="col">
                 <div class="project-description">
                     <h2 class="mb-5">Dictionary App</h2>
                     <p class="mb-5 text-muted">
-                        Made with React.js, Bootstrap, HTML, CSS, and the SheCodes dictionary API, users can search for
+                        Using the SheCodes dictionary API, users can search for
                         any word and find
                         the definition along with some example sentences, synonyms, and photos.
                     </p>
+                    <div class="mb-5">
+                        <span class="skill">React.js</span>
+                        <span class="skill">Bootstrap</span>
+                        <span class="skill">HTML</span>
+                        <span class="skill">CSS</span>
+                        <span class="skill">API</span>
+                    </div>
                     <a href="/work.html" class="btn btn-branding">Learn more</a>
                 </div>
             </div>
@@ -84,7 +105,7 @@
                 <img src="/images/dictionaryapp.png" class="img-fluid project-preview" alt="Dictionary app preview">
             </div>
         </div>
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col d-none d-lg-block project">
                 <img src="/images/travel.png" class="img-fluid project-preview" alt="Travel project preview">
             </div>
@@ -92,10 +113,17 @@
                 <div class="project-description">
                     <h2 class="mb-5">Travel landing page</h2>
                     <p class="mb-5 text-muted">
-                        Made with Bootstrap, HTML, and CSS, this project showcases the city of Denver with some facts
+                        This project showcases the city of Denver with some facts
                         about the city, recommended restaurants and some great photos! This landing page also
                         demonstrates great SEO and is fully responsive.
                     </p>
+                    <div class="mb-5">
+                        <span class="skill">Bootstrap</span>
+                        <span class="skill">HTML</span>
+                        <span class="skill">CSS</span>
+                        <span class="skill">SEO</span>
+                        <span class="skill">API</span>
+                    </div>
                     <a href="/work.html" class="btn btn-branding">Learn more</a>
                 </div>
             </div>
