--- a/about.html
+++ b/about.html
@@ -41,59 +41,56 @@
                 </li>
             </ul>
         </nav>
-    </div>
-    <div class="content-container container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="content">
+        <div class="content-container container">
+            <div class="content">
+                <div class="intro-headline">
                     <h1 class="mb-4 introduction">Hi, I'm Laurel Rubel</h1>
                     <h2 class="mb-4">Front-end developer, based in Colorado.</h2>
-                    <p>When I found myself describing my latest piece of code as
-                        “elegant,” I knew I was
-                        hooked.
-                    </p>
-                    <p>
-                        For a long time, my passion was psychology. It was my dream to become a therapist and help
-                        people every day. After I got
-                        my BA in Psychology, I was on track to achieve my goals. I started graduate school in counseling
-                        psychology and then… I
-                        gradually realized that being a therapist wasn’t for me. I started researching different career
-                        paths and eventually I
-                        stumbled upon a JavaScript tutorial.
-                    </p>
-                    <p>
-                        Coding was fascinating. Gripping. I was eager to learn as much as I could. I’ve run into my
-                        share of frustrating
-                        problems, but for me, coding is like an endless puzzle I am determined to solve - and I have
-                        always loved puzzles.
-                        Coding is engaging and creative, and I can’t stop learning more. I have had to force myself to
-                        slow down and not get
-                        carried away trying to learn too much at once. Front-end web development plays to all my
-                        strengths and passions. It
-                        involves attention to detail, creativity, problem solving, patience and communication.
-                    </p>
-                    <p>
-                        I still love psychology - and I will bring my knowledge of the mind and behavior into my career
-                        as a Front-end web
-                        developer. Coding involves a lot of communication - from my code, to the computer, to the user,
-                        and while working with
-                        other developers. I also love making my websites responsive and accessible to all. I consider
-                        user expectations and
-                        experience when creating a website, keeping in mind users with disabilities and those who are
-                        using screen readers.
-                    </p>
-                    <p>
-                        My current skills include JavaScript, Bootstrap, HTML, CSS, React.js, VS Code, CLI, and
-                        Git/GitHub. I am working hard to
-                        learn more and strengthen these skills. I am currently learning advanced React.js, and intend to
-                        start learning more
-                        programming languages, frameworks, and principles including Node.js, Next.js, and TypeScript.
-                    </p>
+                </div>
+                <p>When I found myself describing my latest piece of code as
+                    “elegant,” I knew I was
+                    hooked.
+                </p>
+                <p>
+                    For a long time, my passion was psychology. It was my dream to become a therapist and help
+                    people every day. After I got
+                    my BA in Psychology, I was on track to achieve my goals. I started graduate school in counseling
+                    psychology and then… I
+                    gradually realized that being a therapist wasn’t for me. I started researching different career
+                    paths and eventually I
+                    stumbled upon a JavaScript tutorial.
+                </p>
+                <p>
+                    Coding was fascinating. Gripping. I was eager to learn as much as I could. I’ve run into my
+                    share of frustrating
+                    problems, but for me, coding is like an endless puzzle I am determined to solve - and I have
+                    always loved puzzles.
+                    Coding is engaging and creative, and I can’t stop learning more. I have had to force myself to
+                    slow down and not get
+                    carried away trying to learn too much at once. Front-end web development plays to all my
+                    strengths and passions. It
+                    involves attention to detail, creativity, problem solving, patience and communication.
+                </p>
+                <p>
+                    I still love psychology - and I will bring my knowledge of the mind and behavior into my career
+                    as a Front-end web
+                    developer. Coding involves a lot of communication - from my code, to the computer, to the user,
+                    and while working with
+                    other developers. I also love making my websites responsive and accessible to all. I consider
+                    user expectations and
+                    experience when creating a website, keeping in mind users with disabilities and those who are
+                    using screen readers.
+                </p>
+                <p>
+                    My current skills include JavaScript, Bootstrap, HTML, CSS, React.js, VS Code, CLI, and
+                    Git/GitHub. I am working hard to
+                    learn more and strengthen these skills. I am currently learning advanced React.js, and intend to
+                    start learning more
+                    programming languages, frameworks, and principles including Node.js, Next.js, and TypeScript.
+                </p>
+                <div class="see-projects">
                     <a href="/work.html" class="btn btn-branding">See my projects</a>
                 </div>
-            </div>
-            <div class="col-lg-6">
-                <img src="/images/lrubel.JPG" class="img-fluid portrait" alt="Laurel Rubel">
             </div>
         </div>
         <footer>
@@ -123,7 +120,6 @@
                 <a href="https://github.com/LaurelFR/portfolio-project">open-sourced on GitHub</a>
             </p>
         </footer>
-    </div>
     </div>
 </body>
 
