Added new styling

--- a/about.html
+++ b/about.html
@@ -41,8 +41,10 @@
                 </li>
             </ul>
         </nav>
+    </div>
+    <div class="about-content">
         <div class="content-container container">
-            <div class="content">
+            <div class="content about-text">
                 <div class="intro-headline">
                     <h1 class="mb-4 introduction">Hi, I'm Laurel Rubel</h1>
                     <h2 class="mb-4">Front-end developer, based in Colorado.</h2>
@@ -93,6 +95,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container">
         <footer>
             <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
                 <div>
