--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         </nav>
     </div>
     <div class="content-container container">
-        <div class="content">
+        <div class="content contact-content">
             <h1 class="mb-5">Let's get in touch!</h1>
             <h3>Email</h3>
             <p>
