--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <nav class="d-flex justify-content-between">
             <a href="/" title="Homepage">
-                <img src="/images/logo.png" class="logo" alt="Laurel logo">
+                <img src="/images/logopurple.png" class="logo" alt="Laurel logo">
             </a>
             <ul>
                 <li class="active">
@@ -45,7 +45,7 @@
     <div class="hero">
         <div class="row align-items-center">
             <div class="col-8">
-                <p class="mb-3">👋 Hello, I'm</p>
+                <p class="mb-3">Hello, I'm</p>
                 <h1>Laurel Rubel</h1>
                 <h2 class="mb-5">Front-end developer based in Denver, Colorado</h2>
                 <div>
