--- a/work.html
+++ b/work.html
@@ -45,8 +45,7 @@
     <div class="content-container container">
         <div class="content">
             <h1 class="mb-5">Take a look at what I've been working on!</h1>
-
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-md-6 mb-4">
                     <img src="/images/weatherapp.png" class="img-fluid mb-3 rounded" alt="Weather app preview">
                     <h3 class="text-center m-0">Weather App</h3>
