Added responsive styling to homepage

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="hero">
         <div class="row align-items-center">
-            <div class="col-8">
+            <div class="col-md-8">
                 <p class="mb-3">Hello, I'm</p>
                 <h1>Laurel Rubel</h1>
                 <h2 class="mb-5">Front-end developer based in Denver, Colorado</h2>
@@ -52,7 +52,7 @@
                     <a href="/contact.html" class="btn btn-branding mt-2" title="Contact me">Contact me</a>
                 </div>
             </div>
-            <div class="col-4 d-flex align-items-start">
+            <div class="col-md-4 d-flex align-items-start">
                 <img src="/images/laurelrubel.png" class="img-fluid portrait" alt="Laurel Rubel">
             </div>
         </div>
