Added responsive styling

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <div class="content about-text">
                 <div class="intro-headline">
                     <h1 class="mb-4 introduction">Hi, I'm Laurel Rubel</h1>
-                    <h2 class="mb-4">Front-end developer, based in Colorado.</h2>
+                    <h2 class="mb-4">Front-end developer</h2>
                 </div>
                 <p>When I found myself describing my latest piece of code as
                     “elegant,” I knew I was
