--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                         <span class="skill">CSS</span>
                         <span class="skill">API</span>
                     </div>
-                    <a href="/work.html" class="btn btn-branding">Learn more</a>
+                    <div class="learn-more">
+                        <a href="/work.html" class="btn btn-branding">Learn more</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -98,7 +100,9 @@
                         <span class="skill">CSS</span>
                         <span class="skill">API</span>
                     </div>
-                    <a href="/work.html" class="btn btn-branding">Learn more</a>
+                    <div class="learn-more">
+                        <a href="/work.html" class="btn btn-branding">Learn more</a>
+                    </div>
                 </div>
             </div>
             <div class="col d-none d-lg-block project">
