Updated logo src

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <div class="container">
         <nav class="d-flex justify-content-between">
             <a href="/" title="Homepage">
-                <img src="/images/logo.png" class="logo d-md-block" alt="Laurel logo">
+                <img src="/images/logocolor.png" class="logo d-md-block" alt="Laurel logo">
             </a>
             <ul>
                 <li>
