Fixed spacing in footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </div>
     </div>
-    <p class="text-center m-5">Check out some of my featured projects below</p>
+    <p class="text-center m-5 check-out">Check out some of my featured projects below!</p>
     <div class="container">
         <div class="row mb-5 align-items-center">
             <div class="col d-none d-lg-block project">
