--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
     </div>
     <div class="container">
         <footer>
-            <div class="contact-box justify-content-between align-items-center d-none d-md-flex">
+            <div class="contact-box justify-content-between align-items-center mb-5 d-none d-md-flex">
                 <div>
                     <h3>Work Inquiry</h3>
                     <p class="text-muted">Let's work together!</p>
