--- a/work.html
+++ b/work.html
@@ -89,7 +89,7 @@
             </div>
         </div>
         <footer>
-            <div class="contact-box justify-content-between align-items-center d-none d-md-flex">
+            <div class="contact-box justify-content-between align-items-center mb-5 d-none d-md-flex">
                 <div>
                     <h3>Work Inquiry</h3>
                     <p class="text-muted">Let's work together!</p>
