Added resume with links

--- a/about.html
+++ b/about.html
@@ -91,7 +91,15 @@
                     programming languages, frameworks, and principles including Node.js, Next.js, and TypeScript.
                 </p>
                 <div class="see-projects">
-                    <a href="/work.html" class="btn btn-branding">See my projects</a>
+                    <div class="row">
+                        <div class="col">
+                            <a href="/work.html" class="btn btn-branding">See my projects</a>
+                        </div>
+                        <div class="col">
+                            <a href="/images/LaurelRubelresume.pdf" target="_blank" class="btn btn-branding">See my
+                                resume</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -118,10 +126,14 @@
                 <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
+                <a href="/images/LaurelRubelresume.pdf" target="_blank" title="Resume">
+                    <i class="fa-solid fa-file-pdf"></i>
+                </a>
             </div>
             <p class="text-center mt-5">
                 ✌️ This project was coded by Laurel Rubel and is
-                <a href="https://github.com/LaurelFR/portfolio-project">open-sourced on GitHub</a>
+                <a href="https://github.com/LaurelFR/portfolio-project" target="_blank">open-sourced on
+                    GitHub</a>
             </p>
         </footer>
     </div>
