--- a/work.html
+++ b/work.html
@@ -109,6 +109,9 @@
                 <a href="https://www.linkedin.com/in/laurelrubel/" target="_blank" title="LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
+                <a href="/images/LaurelRubelresume.pdf" target="_blank" title="Resume">
+                    <i class="fa-solid fa-file-pdf"></i>
+                </a>
             </div>
             <p class="text-center mt-5">
                 ✌️ This project was coded by Laurel Rubel and is
