Added form name

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                     <form action="https://formspree.io/f/xleyjlla" method="POST" class="border p-3 rounded mb-3">
                         <div class="mb-3">
                             <label class="form-label">Name:</label>
-                            <input type="text" class="form-control" />
+                            <input type="text" class="form-control" name="name" />
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Email Address:</label>
