Added new project to work page

--- a/work.html
+++ b/work.html
@@ -51,8 +51,8 @@
                     <h3 class="text-center m-0">Weather App</h3>
                     <p class="text-center text-muted">Built with React.js, Bootstrap, HTML and CSS</p>
                     <div class="text-center mt-4 mb-5">
-                        <a href="https://react-weather-app-lfr.netlify.app/"
-                            class="btn btn-branding launch-button">Launch
+                        <a href="https://react-weather-app-lfr.netlify.app/" class="btn btn-branding launch-button"
+                            target="_blank">Launch
                             Project</a>
                     </div>
                 </div>
@@ -62,8 +62,8 @@
                     <h3 class="text-center m-0">Dictionary App</h3>
                     <p class="text-center text-muted">Built with React.js, Bootstrap, HTML and CSS</p>
                     <div class="text-center mt-4 mb-5">
-                        <a href="https://react-dictionary-app-lfr.netlify.app/"
-                            class="btn btn-branding launch-button">Launch
+                        <a href="https://react-dictionary-app-lfr.netlify.app/" class="btn btn-branding launch-button"
+                            target="_blank">Launch
                             Project</a>
                     </div>
                 </div>
@@ -72,8 +72,8 @@
                     <h3 class="text-center m-0">Travel Landing Page</h3>
                     <p class="text-center text-muted">Built with Bootstrap, HTML and CSS</p>
                     <div class="text-center mt-4 mb-5">
-                        <a href="https://denver-travel-website.netlify.app/"
-                            class="btn btn-branding launch-button">Launch
+                        <a href="https://denver-travel-website.netlify.app/" class="btn btn-branding launch-button"
+                            target="_blank">Launch
                             Project</a>
                     </div>
                 </div>
@@ -82,7 +82,19 @@
                     <h3 class="text-center m-0">World Clock Project</h3>
                     <p class="text-center text-muted">Built with Moment.js, HTML, CSS and JavaScript</p>
                     <div class="text-center mt-4 mb-5">
-                        <a href="https://world-clock-lr.netlify.app/" class="btn btn-branding launch-button">Launch
+                        <a href="https://world-clock-lr.netlify.app/" class="btn btn-branding launch-button"
+                            target="_blank">Launch
+                            Project</a>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <img src="/images/randomquotes.png" class="img-fluid mb-3 rounded"
+                        alt="Random quotes generator project preview">
+                    <h3 class="text-center m-0">Random Quotes Generator</h3>
+                    <p class="text-center text-muted">Built with React.js, Bootstrap, HTML and CSS</p>
+                    <div class="text-center mt-4 mb-5">
+                        <a href="https://random-quotes-generator-lfr.netlify.app/"
+                            class="btn btn-branding launch-button" target="_blank">Launch
                             Project</a>
                     </div>
                 </div>
