Added new styling to homepage

--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
                         <span class="skill">CSS</span>
                         <span class="skill">API</span>
                     </div>
-                    <div class="learn-more">
-                        <a href="/work.html" class="btn btn-branding">Learn more</a>
+                    <div class="learn-more d-flex align-items-center">
+                        <a href="https://react-weather-app-lfr.netlify.app/" class="btn btn-branding me-4"
+                            target="_blank">Launch Project</a>
+                        <a href="https://github.com/LaurelFR/react-weather-project" target="_blank"
+                            title="GitHub repository">
+                            <i class="fab fa-github github-project"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -100,8 +105,12 @@
                         <span class="skill">CSS</span>
                         <span class="skill">API</span>
                     </div>
-                    <div class="learn-more">
-                        <a href="/work.html" class="btn btn-branding">Learn more</a>
+                    <div class="learn-more d-flex align-items-center">
+                        <a href="https://react-dictionary-app-lfr.netlify.app/" class="btn btn-branding me-4">Launch
+                            Project</a>
+                        <a href="https://github.com/LaurelFR/dictionary-app" target="_blank" title="GitHub repository">
+                            <i class="fab fa-github github-project"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -128,7 +137,13 @@
                         <span class="skill">SEO</span>
                         <span class="skill">API</span>
                     </div>
-                    <a href="/work.html" class="btn btn-branding">Learn more</a>
+                    <div class="learn-more d-flex align-items-center">
+                        <a href="https://denver-travel-website.netlify.app/" class="btn btn-branding me-4">Launch
+                            Project</a>
+                        <a href="https://github.com/LaurelFR/travel-project" target="_blank" title="GitHub repository">
+                            <i class="fab fa-github github-project"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
